# video-intake-agent

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  video_intake.py  video_intake_mcp.py  video_intake_mcp_client.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: ATTRIBUTION.md  README.md
docs/: CONTRIBUTING.zh-CN.md  README.zh-CN.md  architecture.md  mcp.md  mcp.zh-CN.md  privacy.md  release-checklist.md  roadmap.md
integrations/claude-code/commands/: video-intake.md
integrations/codex/video-intake/: SKILL.md
integrations/codex/video-intake/agents/: openai.yaml
scripts/: build_demo_assets.py
tests/: test_mcp_server.py  test_video_intake.py
