[project]
name = "video-intake-agent"
version = "0.2.0"
description = "Agent-native naming, timeline descriptions, and similarity archiving for videos"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Freakz2z", email = "freak050321@gmail.com" }]
keywords = ["video", "ffmpeg", "claude-code", "codex", "agent", "file-naming", "similarity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Video",
]

[project.scripts]
video-intake = "video_intake:main"
video-intake-mcp = "video_intake_mcp:main"
video-intake-mcp-client = "video_intake_mcp_client:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]
mcp = ["mcp>=1.27,<2"]
dev = ["build>=1.2", "mcp>=1.27,<2", "pytest>=8.0", "ruff>=0.11"]

[project.urls]
Homepage = "https://github.com/Freakz2z/video-intake-agent"
Repository = "https://github.com/Freakz2z/video-intake-agent"
Issues = "https://github.com/Freakz2z/video-intake-agent/issues"
Changelog = "https://github.com/Freakz2z/video-intake-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["video_intake", "video_intake_mcp", "video_intake_mcp_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
